<resources>
    <string name="app_name">Popular Movies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--Screens-->
    <string name="title_details">Movie Details</string>
    <string name="title_reviews">Movie Reviews</string>
    <string name="title_favorite">Favorite List</string>
    <string name="sort_top">Top Rated</string>
    <string name="sort_popular">Popular Movies</string>
    <string name="favorite">Favorites</string>
    <string name="rate" formatted="false">%s/10</string>
    <string name="trailer">Trailers</string>
    <string name="no_trailers">No trailers =(</string>
    <string name="cant_upload_data">Unfortunately, we can\'t upload data, check internet connection.</string>
    <string name="no_reviews">No reviews =(</string>
    <string name="show_reviews">Show Reviews</string>
    <string name="favorite_added">Movie Added to favorites</string>
    <string name="favorite_removed">Movie Removed from favorites</string>
    <string name="pin_added">Movie Pinned for watching</string>
    <string name="pin_removed">Movie Unpinned</string>
    <string name="no_favorite">Your Favorite List is empty =(</string>
    <string name="list_watch">Movies to watch</string>
    <string name="no_pinned">Your List to watch is empty =(</string>
    <string name="title_movies">Movies List</string>
    <string name="communicate">Communication</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_info">Information</string>
    <string name="email">y23helen@gmail.com</string>
    <string name="contacts_info">All data in this application is provided using themoviedb.org API.\n\n
    If you have some suggestions what will make this app better, feel free to write on email.</string>
    <string name="save">save</string>
    <string name="no_search">No search results</string>
    <string name="search">Search</string>
    <string name="ads">Ads</string>

    <!--Errors-->
    <string name="smth_went_wrong">Something went wrong, please check your internet connection and try again!</string>
    
    <!--Transition Names - not translatable-->
    <string name="poster_transition">poster transition</string>

    <!--Content Description-->
    <string name="cd_app_logo">App logo</string>
    <string name="cd_movie_poster">Movie Poster</string>
    <string name="cd_rate_star">Rate star</string>
    <string name="cd_image_ghost">Ghost image</string>
    <string name="cd_src_trailer">trailer item image</string>
    <string name="cd_clear_search">Clear search icon</string>
    <string name="cd_pin">Pin movie icon</string>
    <string name="cd_favorite">Make movie favorite description</string>
    <string name="cd_ads">Advertising</string>
    <string name="cd_search">Search movie</string>
    <string name="cd_contact">The Movie Database</string>

    <!--Ads-->
    <string name="app_id_ads">ca-app-pub-1227764705187744~6269641254</string>
    <!--Real ads-->
    <string name="banner_ad_unit_id">ca-app-pub-1227764705187744/7432401889</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1227764705187744/8176962751</string>
    <string name="inter_ads_menu">ca-app-pub-1227764705187744/7468433006</string>

    <!--test ads-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--<string name="inter_ads_menu">ca-app-pub-3940256099942544/1033173712</string>-->

    <!--Custom Events in Fabric-->
    <string name="ce_open_ads">Open Ads via NavMenu</string>

</resources>
